# automation-project-

./: .env  .gitignore  Dockerfile  README.md  cloudbuild.yaml  cloudbuild.yaml   docker-compose.yml  pyproject.toml  requirments.txt  templates.json
src/:  gunicorn_conf.py  __init__.py  broadcast.py  config.py  deps.py  gcp.py  gunicorn_conf.py  logger.py  main.py  openai_agent.py  recommendation.py  shopify_client.py  test-gcp.py  translation.py  zoko_client.py
